# TemplateISD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark.cpp  dumer.cpp  main.cpp  prange.cpp  setup.sh
algorithms/: dumer.h  prange.h  special_prange.h  template_alg.h  template_dumer.h  template_prange.h
challenges/mceliece/: mce1041sp.h  mce1101sp.h  mce1223sp.h  mce1473sp.h  mce156sp.h  mce1665sp.h  mce1995sp.h  mce2062sp.h  mce2197sp.h  mce2197sp_old.h  mce2403sp.h  mce240sp.h  mce2681sp.h  mce2893sp.h  mce3108sp.h  mce3180sp.h  mce3488sp.h  mce3488sp_random.h  mce381sp.h  mce482sp.h  mce640sp.h  mce751sp.h  mce808sp.h  mce923sp.h  mce982sp.h
cmake/: OptimizeForArchitecture.cmake
misc/: chase_manager.h  custom_matrix.h  helper.h  instance.h  random.h
scripts/: Complexity.py  ErrorVectorMisc.py  Instance.py  cost_estimates.sage  cost_estimates.spyx  interpolation.py  noise_model.sage  plot.py  templatePrange.sage
scripts/measurements/: StandardPrangeTime.txt  TemplateDumerV1Time.txt  TemplatePrangeTime.txt
